--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "vite --host 0.0.0.0",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "vite build && cp dist/index.html dist/404.html",
+    "preview": "vite build && vite preview"
   },
   "dependencies": {
     "localstorage-slim": "^2.4.0",
